# ChangeLog for sys-fs/evms
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.33 2005/06/02 00:45:46 eradicator Exp $

*evms-2.5.2-r1 (02 Jun 2005)

  02 Jun 2005; Jeremy Huddleston <eradicator@gentoo.org> -evms-2.5.2.ebuild,
  +evms-2.5.2-r1.ebuild:
  Stable sparc. Revbumping to force users to get evms2-start.sh on their
  system otherwise evms_activate will not be run with recent baselayouts!!!

  27 May 2005; Mike Frysinger <vapier@gentoo.org> +files/evms2-start.sh,
  evms-2.5.2.ebuild:
  Add basic evms2 start addon #50711 by Asbjorn Sannes.

  12 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org> metadata.xml,
  -evms-2.3.4-r1.ebuild:
  Removing old version.

  28 Mar 2005; David Holm <dholm@gentoo.org> evms-2.5.2.ebuild:
  Stable on ppc.

  13 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org> -evms-2.5.1.ebuild,
  evms-2.5.2.ebuild:
  Stable amd64, x86.  Added to ~sparc

*evms-2.5.2 (04 Mar 2005)

  04 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  evms-2.3.4-r1.ebuild, -evms-2.4.1.ebuild, evms-2.5.1.ebuild,
  +evms-2.5.2.ebuild:
  Version bump for a bugfix release. Removing old version. Added glib-1
  dependency when USE=ncurses -gtk. Closes bug #83503.

  26 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org> evms-2.5.1.ebuild:
  Stable amd64, x86.

*evms-2.5.1 (05 Feb 2005)

  05 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org> -evms-2.2.2.ebuild,
  -evms-2.3.2-r1.ebuild, -evms-2.4.0.ebuild, -evms-2.5.0.ebuild,
  +evms-2.5.1.ebuild:
  Version bump and cleanup.

*evms-2.5.0 (27 Dec 2004)

  27 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org> +evms-2.5.0.ebuild:
  Version bump.

*evms-2.4.1 (10 Nov 2004)

  10 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> +evms-2.4.1.ebuild:
  Version bump.

  07 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.4.0.ebuild:
  Stable amd64, x86.

*evms-2.4.0 (20 Sep 2004)
