@@ -1,77 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/evms-1.2.1-r1.ebuild,v 1.8 2005/02/05 10:00:28 eradicator Exp $
-
-inherit eutils
-
-DESCRIPTION="Utilities for the IBM Enterprise Volume Management System"
-HOMEPAGE="http://www.sourceforge.net/projects/evms"
-SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="x86 ppc amd64"
-IUSE="ncurses gtk"
-
-#EVMS uses libuuid from e2fsprogs
-DEPEND="virtual/libc
-	sys-fs/e2fsprogs
-	gtk? ( =x11-libs/gtk+-1* )
-	ncurses? ( sys-libs/ncurses )"
-
-
-src_compile() {
-	local interfaces="CommandLine,utilities,LvmUtils"
-	use ncurses && interfaces="ncurses,${interfaces}"
-	use gtk && interfaces="evmsgui,${interfaces}"
-
-	cd engine
-	./configure \
-		--prefix=/usr \
-		--libdir=/lib \
-		--sbindir=/sbin \
-		--with-plugins=all \
-		--mandir=/usr/share/man \
-		--includedir=/usr/include \
-		--with-interfaces=${interfaces} \
-		--host=${CHOST} || die "bad ./configure"
-	#1.2.0 doesn't support parallel make
-	make || die "compile problem"
-}
-
-src_install() {
-	make -C engine DESTDIR=${D} install || die
-	dodoc CHANGES COPYING EVMS*.txt PLUGIN.IDS
-
-	# move static libraries to /usr/lib
-	dodir /usr/lib
-	mv -f ${D}/lib/*.a ${D}/usr/lib
-	# Create linker scripts for dynamic libs in /lib, else gcc
-	# links to the static ones in /usr/lib first.  Bug #4411.
-	for x in ${D}/usr/lib/*.a
-	do
-		if [ -f ${x} ]
-		then
-			local lib="${x##*/}"
-			gen_usr_ldscript ${lib/\.a/\.so}
-		fi
-	done
-
-	# realize these symlinks now so they get included
-	cd ${D}/lib
-	rm -f libdlist.so libevms.so
-	ln -sf libevms-${PV}.so libevms.so.1
-	ln -sf libevms.so.1 libevms.so
-	ln -sf libdlist-1.0.so libdlist.so.1
-	ln -sf libdlist.so.1 libdlist.so
-
-	# the gtk+ frontend should live in /usr/sbin
-	if use gtk
-	then
-		dodir /usr/sbin
-		mv -f ${D}/sbin/evmsgui ${D}/usr/sbin
-	fi
-
-	exeinto /etc/init.d
-	newexe ${FILESDIR}/evms-init evms
-}
