@@ -1,20 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2004 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/files/evms2-init,v 1.5 2004/07/15 01:00:34 agriffis Exp $
-
-depend() {
-	need modules
-	before checkfs
-}
-
-start() {
-	ebegin "Starting evms"
-	evms_activate
-	eend $?
-}
-
-stop() {
-	ebegin "Stopping evms"
-	eend 0
-}
