@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/evms
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.33 2005/06/02 00:45:46 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.34 2005/06/02 00:47:38 eradicator Exp $
+
+  02 Jun 2005; Jeremy Huddleston <eradicator@gentoo.org> -files/evms-init,
+  -files/evms2-init, -evms-1.2.1-r1.ebuild:
+  Removing evms-1 from portage.
 
 *evms-2.5.2-r1 (02 Jun 2005)
 
